Add content and basic styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,9 +16,8 @@
   // Workaround for slow stylelint fixer
   // https://github.com/stylelint/vscode-stylelint/issues/45
   "[css]": {
-    "editor.codeActionsOnSaveTimeout": 5000,
     "editor.codeActionsOnSave": {
-      "source.fixAll.stylelint": true
+      // "source.fixAll.stylelint": true
     }
   }
 }
