--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "gatsby": "^2.19.10",
+    "gatsby-plugin-anchor-links": "^1.0.11",
     "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.21",
@@ -45,6 +46,7 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "eslint-plugin-simple-import-sort": "^5.0.1",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^12.0.1",
