--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "build:prod": "set NODE_ENV=production && yarn build && yarn serve",
     "serve": "gatsby serve -p 8000",
     "lint": "run-p lint:*",
-    "lint:js": "eslint \"**/*.js\"",
+    "lint:js": "eslint \"**/*.{js,jsx}\"",
     "lint:js:check": "eslint --print-config . | eslint-config-prettier-check",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:check": "stylelint-config-prettier-check",
-    "lint:pretty": "prettier --check \"**/*.{js,jsx,ts,tsx,css,json,md}\""
+    "lint:pretty": "prettier --check \"**/*.{js,jsx,css,json,md}\""
   },
   "dependencies": {
     "gatsby": "^2.19.10",
-    "gatsby-plugin-anchor-links": "^1.1.1",
     "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.21",
@@ -37,7 +36,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0-beta",
-    "react-icons": "^3.9.0"
+    "react-icons": "^3.9.0",
+    "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
     "@types/react": "^16.9.23",
