--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
   },
   "dependencies": {
     "gatsby": "^2.19.10",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-nprogress": "^2.1.18",
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-plugin-sitemap": "^2.2.26",
+    "gatsby-source-filesystem": "^2.3.27",
+    "gatsby-transformer-sharp": "^2.5.14",
     "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
