--- a/package.json
+++ b/package.json
@@ -21,50 +21,45 @@
     "serve": "gatsby serve -p 8000",
     "lint": "run-p lint:*",
     "lint:js": "eslint \"**/*.{js,jsx}\"",
-    "lint:js:check": "eslint --print-config . | eslint-config-prettier-check",
     "lint:css": "stylelint \"**/*.css\"",
-    "lint:css:check": "stylelint-config-prettier-check",
+    "lint:css:check": "npx stylelint-config-prettier-check",
     "lint:pretty": "prettier --check \"**/*.{js,jsx,css,json,md}\""
   },
   "dependencies": {
-    "gatsby": "^2.24.91",
-    "gatsby-image": "^2.4.16",
-    "gatsby-plugin-nprogress": "^2.1.18",
-    "gatsby-plugin-postcss": "^2.1.19",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.6.31",
-    "gatsby-plugin-sitemap": "^2.2.26",
-    "gatsby-source-filesystem": "^2.3.27",
-    "gatsby-transformer-sharp": "^2.5.14",
+    "gatsby": "^3.10.1",
+    "gatsby-plugin-image": "^1.10.1",
+    "gatsby-plugin-nprogress": "^3.10.0",
+    "gatsby-plugin-postcss": "^4.10.0",
+    "gatsby-plugin-react-helmet": "^4.10.0",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-sitemap": "^4.6.0",
+    "gatsby-source-filesystem": "^3.10.0",
+    "gatsby-transformer-sharp": "^3.10.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0-beta",
-    "react-icons": "^3.9.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "smooth-scroll": "^16.1.3"
   },
   "devDependencies": {
-    "@types/react": "^16.9.23",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-config-problems": "^4.0.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-react": "^7.18.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "eslint-plugin-simple-import-sort": "^5.0.1",
-    "gatsby-plugin-react-svg": "^3.0.0",
+    "@types/react": "^17.0.15",
+    "eslint": "^7.31.0",
+    "eslint-config-galex": "^2.16.7",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.6",
     "postcss-browser-reporter": "^0.6.0",
-    "postcss-import": "^12.0.1",
+    "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^6.0.1",
-    "prettier": "^1.19.1",
+    "postcss-reporter": "^7.0.2",
+    "prettier": "^2.3.2",
     "prop-types": "^15.7.2",
-    "stylelint": "^13.0.0",
-    "stylelint-config-prettier": "^8.0.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^19.0.0",
-    "stylelint-order": "^4.0.0",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
     "typescript": "^4.3.5"
   }
 }
