--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "build:prod": "set NODE_ENV=production && yarn build && yarn serve",
     "serve": "gatsby serve -p 8000",
     "lint": "run-p lint:*",
-    "lint:js": "eslint \"**/*.{js,jsx}\"",
+    "lint:js": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0",
+    "lint:tsc": "tsc",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:check": "npx stylelint-config-prettier-check",
-    "lint:pretty": "prettier --check \"**/*.{js,jsx,css,json,md}\""
+    "lint:pretty": "prettier --check ."
   },
   "dependencies": {
     "gatsby": "^3.10.1",
@@ -45,6 +46,8 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
+    "@types/react-helmet": "^6.1.2",
+    "@types/smooth-scroll": "^16.1.1",
     "eslint": "^7.31.0",
     "eslint-config-galex": "^2.16.7",
     "npm-run-all": "^4.1.5",
