--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,8 @@ jobs:
       - name: Install ⚙️
         run: yarn install --frozen-lockfile
 
+      - name: Build 🛠
+        run: yarn build
+
       - name: Lint 🤓
         run: yarn lint
-        env:
-          NODE_ENV: 'test'
