--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-reporter": "^7.0.2",
-    "prettier": "^2.3.2",
+    "prettier": "3.0.1",
     "prop-types": "^15.7.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
