--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint:pretty": "prettier --check ."
   },
   "dependencies": {
-    "gatsby": "^3.10.1",
+    "gatsby": "3.15.0",
     "gatsby-plugin-image": "^1.10.1",
     "gatsby-plugin-nprogress": "^3.10.0",
     "gatsby-plugin-postcss": "^4.10.0",
@@ -37,12 +37,12 @@
     "gatsby-plugin-sitemap": "^4.6.0",
     "gatsby-source-filesystem": "^3.10.0",
     "gatsby-transformer-sharp": "^3.10.0",
-    "normalize.css": "^8.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0",
-    "smooth-scroll": "^16.1.3"
+    "normalize.css": "8.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-helmet": "6.1.0",
+    "react-icons": "4.10.1",
+    "smooth-scroll": "16.1.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
@@ -50,7 +50,7 @@
     "@types/smooth-scroll": "^16.1.1",
     "eslint": "^7.31.0",
     "eslint-config-galex": "^2.16.7",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "4.1.5",
     "postcss": "^8.3.6",
     "postcss-browser-reporter": "^0.6.0",
     "postcss-import": "^14.0.2",
