--- a/package.json
+++ b/package.json
@@ -27,20 +27,18 @@
     "lint:pretty": "prettier --check ."
   },
   "dependencies": {
-    "gatsby": "3.15.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-nprogress": "^3.10.0",
-    "gatsby-plugin-postcss": "^4.10.0",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-sitemap": "^4.6.0",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-sharp": "^3.10.0",
+    "gatsby": "4.25.7",
+    "gatsby-plugin-image": "^2.24.0",
+    "gatsby-plugin-nprogress": "^4.24.0",
+    "gatsby-plugin-postcss": "^5.24.0",
+    "gatsby-plugin-react-svg": "3.3.0",
+    "gatsby-plugin-sharp": "^4.24.0",
+    "gatsby-plugin-sitemap": "^5.24.0",
+    "gatsby-source-filesystem": "^4.24.0",
+    "gatsby-transformer-sharp": "^4.24.0",
     "normalize.css": "8.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "6.1.0",
     "react-icons": "4.10.1",
     "smooth-scroll": "16.1.3"
   },
