--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/axelboc/website-fontainetkd"
   },
   "engines": {
-    "node": "16.*",
+    "node": "18.*",
     "yarn": "*"
   },
   "scripts": {
@@ -43,18 +43,18 @@
     "smooth-scroll": "16.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.18",
-    "@types/smooth-scroll": "^16.1.1",
+    "@types/react": "18.2.18",
+    "@types/smooth-scroll": "16.1.1",
     "eslint": "^7.31.0",
     "eslint-config-galex": "^2.16.7",
     "npm-run-all": "4.1.5",
-    "postcss": "^8.3.6",
-    "postcss-browser-reporter": "^0.6.0",
-    "postcss-import": "^14.0.2",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-reporter": "^7.0.2",
+    "postcss": "8.4.27",
+    "postcss-browser-reporter": "0.6.0",
+    "postcss-import": "15.1.0",
+    "postcss-preset-env": "9.1.1",
+    "postcss-reporter": "7.0.5",
     "prettier": "3.0.1",
-    "prop-types": "^15.8.1",
+    "prop-types": "15.8.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-rational-order": "^0.1.2",
