--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "lint:pretty": "prettier --check ."
   },
   "dependencies": {
-    "gatsby": "4.25.7",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-nprogress": "^4.24.0",
-    "gatsby-plugin-postcss": "^5.24.0",
+    "gatsby": "5.11.0",
+    "gatsby-plugin-image": "3.11.0",
+    "gatsby-plugin-nprogress": "5.11.0",
+    "gatsby-plugin-postcss": "6.11.0",
     "gatsby-plugin-react-svg": "3.3.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-source-filesystem": "^4.24.0",
-    "gatsby-transformer-sharp": "^4.24.0",
+    "gatsby-plugin-sharp": "5.11.0",
+    "gatsby-plugin-sitemap": "6.11.0",
+    "gatsby-source-filesystem": "5.11.0",
+    "gatsby-transformer-sharp": "5.11.0",
     "normalize.css": "8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
