--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/axelboc/website-fontainetkd"
   },
   "engines": {
-    "node": "18.*",
+    "node": "20.*",
     "yarn": "*"
   },
   "scripts": {
@@ -24,7 +24,7 @@
     "lint:tsc": "tsc",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:check": "npx stylelint-config-prettier-check",
-    "lint:pretty": "prettier --check ."
+    "lint:pretty": "prettier --check --cache ."
   },
   "dependencies": {
     "gatsby": "5.11.0",
@@ -53,12 +53,11 @@
     "postcss-import": "15.1.0",
     "postcss-preset-env": "9.1.1",
     "postcss-reporter": "7.0.5",
-    "prettier": "3.0.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
+    "prettier": "3.3.3",
+    "stylelint": "^16.9.0",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-order": "^4.1.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
     "typescript": "5.1.6"
   }
 }
