--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Checkout 🏷️
         uses: actions/checkout@v4
 
-      - name: Use Node 20 🕹️
+      - name: Set up Node 🕹️
         uses: actions/setup-node@v4
         with:
           node-version-file: 'package.json'
