--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "gatsby-source-filesystem": "5.11.0",
     "gatsby-transformer-sharp": "5.11.0",
     "normalize.css": "8.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "4.10.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.5.0",
     "smooth-scroll": "16.1.3"
   },
   "devDependencies": {
-    "@types/react": "18.2.18",
-    "@types/smooth-scroll": "16.1.1",
+    "@types/react": "18.3.12",
+    "@types/smooth-scroll": "16.1.4",
     "eslint": "^7.31.0",
     "eslint-config-galex": "^2.16.7",
     "npm-run-all": "4.1.5",
@@ -53,11 +53,11 @@
     "postcss-import": "15.1.0",
     "postcss-preset-env": "9.1.1",
     "postcss-reporter": "7.0.5",
-    "prettier": "3.3.3",
-    "stylelint": "^16.9.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-order": "^6.0.4",
-    "typescript": "5.1.6"
+    "prettier": "3.6.2",
+    "stylelint": "16.23.1",
+    "stylelint-config-rational-order": "0.1.2",
+    "stylelint-config-standard": "39.0.0",
+    "stylelint-order": "7.0.0",
+    "typescript": "5.9.2"
   }
 }
