--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type": "git",
     "url": "https://github.com/axelboc/website-fontainetkd"
   },
+  "type": "module",
   "engines": {
     "node": "22.*",
     "yarn": "*"
@@ -20,7 +21,7 @@
     "build:prod": "set NODE_ENV=production && yarn build && yarn serve",
     "serve": "gatsby serve -p 8000 -o",
     "lint": "run-p lint:*",
-    "lint:js": "eslint \"**/*.{js,jsx,ts,tsx}\" --max-warnings=0",
+    "lint:js": "eslint --max-warnings=0",
     "lint:tsc": "tsc",
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:check": "npx stylelint-config-prettier-check",
@@ -43,10 +44,10 @@
     "smooth-scroll": "16.1.3"
   },
   "devDependencies": {
+    "@esrf/eslint-config": "1.3.3",
     "@types/react": "18.3.12",
     "@types/smooth-scroll": "16.1.4",
-    "eslint": "^7.31.0",
-    "eslint-config-galex": "^2.16.7",
+    "eslint": "9.33.0",
     "npm-run-all": "4.1.5",
     "postcss": "8.4.31",
     "postcss-browser-reporter": "0.6.0",
