--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "target": "es2020",
     "lib": ["dom", "dom.iterable", "esnext"],
     "jsx": "react-jsx",
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "isolatedModules": true,
